# employee-agent

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
.scratch/band-c-workspace/: PRD.md
.scratch/band-c-workspace/issues/: 01-confine-reads-to-workspace.md  02-write-file-into-workspace.md  03-run-command-fake-sandbox.md  04-real-docker-sandbox.md
.scratch/employee-agent-mvp/: PRD.md
.scratch/employee-agent-mvp/issues/: 01-chat-spine.md  02-sealing-structured-summary.md  03-keyword-recall-end-to-end.md  04-semantic-recall-rrf.md  05-read-only-tool-surface.md  06-compaction-cost-observability.md
.scratch/retrieval-eval/: PRD.md
.scratch/retrieval-eval/issues/: 01-eval-pipeline-tracer.md  02-honest-corpus-and-floor.md
.scratch/type-hints/issues/: 01-ty-toolchain-and-seam-protocols.md  02-fix-three-latent-bugs.md  03-config-escape-vendor-edge-zero.md
docker/: sandbox.Dockerfile
docs/: spec-04-semantic-recall-rrf.md  spec-evals-retrieval.md
docs/adr/: 0001-single-process-python-with-sqlite-recall.md  0002-local-embeddings-via-fastembed.md  0003-one-summarisation-mechanism-three-timescales.md  0004-compaction-indexes-into-recall-incrementally.md  0005-conversation-is-one-session-recall-scoped-to-sealed.md  0006-structured-summary-format.md  0007-band-c-sandboxed-workspace.md  0008-evals-retrieval-only-with-golden-summaries.md  0009-ty-as-the-type-checker.md
docs/agents/: domain.md
evals/: __init__.py  __main__.py  dataset.yaml  loader.py  runner.py  scoring.py
src/employee_agent/: __main__.py  agent.py  compactor.py  config.py  embedder.py  llm.py  recall.py  sandbox.py  store.py  summarizer.py  tools.py  tui.py  web.py  workspace.py
tests/: fakes.py  test_agent_read_only_tools.py  test_agent_spine.py  test_agent_tools.py  test_compaction_e2e.py  test_compactor.py  test_config_sandbox.py  test_evals_scoring.py  test_recall.py  test_recall_integration.py  test_recall_semantic.py  test_sandbox.py  test_sandbox_integration.py  test_sealing.py  test_store.py  test_summarizer.py  test_workspace.py
