[project]
name = "employee-agent"
version = "0.1.0"
description = "Single-user personal AI assistant with cost-bounded recall (TUI)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "textual",
    "anthropic",
    "sqlite-vec",
    "fastembed",
]

[project.scripts]
employee-agent = "employee_agent.__main__:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/employee_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "docker: real-Docker integration test (ADR-0007); skipped when no Docker daemon is reachable",
]
