[project]
name = "employee-agent"
version = "0.1.0"
description = "Single-user personal AI assistant with cost-bounded recall (TUI)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "textual",
    "anthropic",
    "sqlite-vec",
    "fastembed",
]

[project.scripts]
employee-agent = "employee_agent.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    # Read only by the retrieval eval (ADR-0008); the Agent runtime never
    # parses the dataset, so this is dev-only, never a runtime dependency.
    "pyyaml",
    # Pinned, not floating (ADR-0009): ty is preview and churns, so an exact
    # pin keeps `uv run ty check` reproducible. Expect deliberate bumps.
    "ty==0.0.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/employee_agent"]

# ADR-0009: whole-repo check. The runtime ships only src/, but the highest-value
# catch is a test double drifting from its real seam, so tests/ (and the
# dev-only evals/ instrument) are deliberately in scope too.
[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src", "tests", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on sys.path so the hermetic scoring test can `import evals`.
# `evals/` is a dev-only instrument, never shipped in the wheel.
pythonpath = ["."]
addopts = "-q"
markers = [
    "docker: real-Docker integration test (ADR-0007); skipped when no Docker daemon is reachable",
]
